compiler/testData/cli/jvm/syntheticAccessorSignatureClash.out
compiler/testData/cli/jvm/syntheticAccessorSignatureClash.kt:15:5: error: accidental override: The following declarations have the same JVM signature (access$foo(LDerived;)V):
    fun `access$foo`(d: Derived): kotlin.Unit
    fun foo(): kotlin.Unit
    private fun foo() {}
    ^
compiler/testData/cli/jvm/syntheticAccessorSignatureClash.kt:18:9: error: accidental override: The following declarations have the same JVM signature (access$getBar$p(LDerived;)I):
    fun `access$getBar$p`(d: Derived): kotlin.Int
    fun <get-bar>(): kotlin.Int
        get
        ^
compiler/testData/cli/jvm/syntheticAccessorSignatureClash.kt:19:9: error: accidental override: The following declarations have the same JVM signature (access$setBar$p(LDerived;I)V):
    fun `access$setBar$p`(d: Derived, i: kotlin.Int): kotlin.Unit
    fun <set-bar>(<set-?>: kotlin.Int): kotlin.Unit
        set
        ^
compiler/testData/cli/jvm/syntheticAccessorSignatureClash.kt:21:5: error: accidental override: The following declarations have the same JVM signature (access$getBaz$p(LDerived;)I):
    fun `access$getBaz$p`(d: Derived): kotlin.Int
    fun <get-baz>(): kotlin.Int
    private var baz = 1
    ^
compiler/testData/cli/jvm/syntheticAccessorSignatureClash.kt:23:5: error: accidental override: The following declarations have the same JVM signature (access$getBoo$p(LDerived;)I):
    fun `access$getBoo$p`(d: Derived): kotlin.Int
    fun <get-boo>(): kotlin.Int
    private val boo = 1
    ^
compiler/testData/cli/jvm/syntheticAccessorSignatureClash.kt:27:9: error: accidental override: The following declarations have the same JVM signature (access$setBar1$p(LDerived;I)V):
    fun `access$setBar1$p`(d: Derived, i: kotlin.Int): kotlin.Unit
    fun <set-bar1>(<set-?>: kotlin.Int): kotlin.Unit
        set
        ^
COMPILATION_ERROR